<resources>
    <string name="app_name">MoneyChange 1.2.2</string>
   <string name="Title">MoneyChange</string>

    <string name="since">Indique el monto </string>
    <string name="resultado">Resutado </string>
    <string name="cleanData">Limpiar</string>
    <string name="cal">Calcular</string>
    <string name="indique">Indique Cantidad</string>
    <string name="acercade">About</string>
    <string name="Exit">Exit</string>
    <string name="version">Version</string>
    <string name="restart">Restart</string>
    <string name="Rights"> Copyright © 2018 MoneyChange  All Rights Reserved </string>


</resources>
